--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
 <body>
 
 <header> 
-    <h2> logo </h2>
+    <h2> Logo </h2>
 
     <ul>
-        <li> header link one </li>
-        <li> header link two </li>
-        <li> header link three </li>
+        <li> Link One </li>
+        <li> Link Two </li>
+        <li> Link Three </li>
     </ul>
 </header>
 
 <main>
     <div>
-        <h1> this website is awesome </h1>
+        <h1> This website is awesome! </h1>
 
         <p>
-            this website has some subtext that goes here under the main title. it's a smaller font and the color is lower contrast.  
+            This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.  
         </p>
 
         <button type="submit">
-            sign up
+            Sign Up
         </button>
     </div>
 
@@ -39,59 +39,59 @@
 </main>
 
 <section>
-    <h2> some random information </h2>
+    <h2> Some Random Information </h2>
 
     <div> 
         <img src="" alt="image placeholder">
 
-        <p> this is some subtext under an illustration or image. </p>        
+        <p> This is some subtext under an illustration or image. </p>        
     </div>
 
     <div> 
         <img src="" alt="image placeholder">
 
-        <p> this is some subtext under an illustration or image. </p>        
+        <p> This is some subtext under an illustration or image. </p>        
     </div>
 
     <div> 
         <img src="" alt="image placeholder">
 
-        <p> this is some subtext under an illustration or image. </p>        
+        <p> This is some subtext under an illustration or image. </p>        
     </div>
 
     <div> 
         <img src="" alt="image placeholder">
 
-        <p> this is some subtext under an illustration or image. </p>        
+        <p> This is some subtext under an illustration or image. </p>        
     </div>
 </section>
 
 <section>
     <p>
-        this is an inspiring quote, or a testimonial from a customer. maybe it's just filling up space, or maybe people will actually read it. who knows? all i know is that it looks nice.
+        This is an inspiring quote, or a testimonial from a customer. maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.
     </p>
 
-    <p> - thor, god of thunder </p>
+    <p> - Thor, God of Thunder </p>
 </section>
 
 <section>
 <div>
     <div>
-        <h3> call to action! it's time! </h3>
+        <h3> Call to action! It's time! </h3>
 
-        <p> sign up for our product by clicking that button right over there! </p>
+        <p> Sign up for our product by clicking that button right over there! </p>
     </div>
 
     <div>
         <button type="submit">
-            sign up
+            Sign Up
         </button>
     </div>
 </div>
 </section>
 
 <footer>
-    <p> copyright © the odin project 2022</p>
+    <p> Copyright © The Odin Project 2022 | r2ws </p>
 </footer>
 
 </body>
