--- a/index.html
+++ b/index.html
@@ -10,88 +10,95 @@
 
 <body>
 
-<header> 
+<header class="header"> 
     <h2> Logo </h2>
 
-    <ul>
-        <li> Link One </li>
-        <li> Link Two </li>
-        <li> Link Three </li>
+    <ul class="link-list">
+        <li> <a href="#"> Link One </a> </li>
+        <li> <a href="#"> Link Two </a> </li>
+        <li> <a href="#"> Link Three </a> </li>
     </ul>
 </header>
 
-<main>
-    <div>
+<main class="main">
+    <div class="main-left">
         <h1> This website is awesome! </h1>
 
         <p>
-            This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.  
+            To be honest with you I have no idea what to put here but I decided to go with an ocean theme with the pictures and colors. To make this site marginally more useful though, the buttons all lead to the #TeamSeas website, so go donate and save the turtles?
         </p>
 
-        <button type="submit">
-            Sign Up
-        </button>
+        <a href="https://teamseas.org/">
+            <button type="submit" class="donate-button"> 
+                Go Donate
+            </button>
+        </a> 
     </div>
 
-    <div>
-        <img src="#" alt="image placeholder">
+    <div class="main-right">
+        <img src="pictures/ocean.jpg" alt="Some ocean.">
     </div>
 </main>
 
-<section>
-    <h2> Some Random Information </h2>
+<section class="photo-gallery">
+    <h2> Some Random Ocean Pictures </h2>
 
     <div> 
-        <img src="" alt="image placeholder">
+        <img src="pictures/fish.jpg" alt="Some cool fish.">
 
-        <p> This is some subtext under an illustration or image. </p>        
+        <p> Look at all these fishies. They have cool yellow fins and stripes. </p>        
     </div>
 
     <div> 
-        <img src="" alt="image placeholder">
+        <img src="pictures/jellyfish-2.jpg" alt="Look at those jellyfish.">
 
-        <p> This is some subtext under an illustration or image. </p>        
+        <p> These jellyfish look sick. I have no idea what species they are. </p>        
     </div>
 
     <div> 
-        <img src="" alt="image placeholder">
+        <img src="pictures/jellyfish.jpg" alt="One more jellyfish.">
 
-        <p> This is some subtext under an illustration or image. </p>        
+        <p> This is one fat jellyfish. It looks like the guys in the last picture but chonkier. </p>        
     </div>
 
     <div> 
-        <img src="" alt="image placeholder">
+        <img src="pictures/sunset.jpg" alt="A sunset.">
 
-        <p> This is some subtext under an illustration or image. </p>        
+        <p> And lastly, a picture of some generic sunset to make you feel good. </p>        
     </div>
 </section>
 
-<section>
+<section class="quote">
     <p>
-        This is an inspiring quote, or a testimonial from a customer. maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.
+        This is an inspiring quote, or a testimonial from a customer. maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice. Furthermore, I'll add a few more sentences to make this paragraph longer. However, do not take this the wrong way! This isn't just so it fills up more space. Trust me. Also help clean the ocean and go donate to #TeamSeas!
     </p>
 
-    <p> - Thor, God of Thunder </p>
+    <p class="quote-author"> - Thor, God of Thunder (Probably) </p>
 </section>
 
-<section>
+<section class="call">
 <div>
-    <div>
+    <div class="call-left">
         <h3> Call to action! It's time! </h3>
 
-        <p> Sign up for our product by clicking that button right over there! </p>
+        <p> Woah. The header above has way too much energy. Go donate to #TeamSeas though. </p>
     </div>
 
-    <div>
-        <button type="submit">
-            Sign Up
-        </button>
+    <div class="call-right">
+        <a href="https://teamseas.org/">
+            <button type="submit" class="donate-button">
+                Go Donate
+            </button>
+        </a> 
     </div>
 </div>
 </section>
 
-<footer>
-    <p> Copyright © The Odin Project 2022 | r2ws </p>
+<footer class="footer">
+    <p> Copyright © 
+        <a href="https://www.theodinproject.com/"> The Odin Project 2022 </a> | 
+        <a href="https://github.com/gr2ws"> r2ws </a> 
+    </p>
 </footer>
 
 </body>
