--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="index.css">
 <title> Landing Page </title>
 </head>
 
@@ -21,23 +22,21 @@
 </header>
 
 <main class="main">
-    <div class="main-left">
+    <div class="main-overlay">
         <h1> This website is awesome! </h1>
 
         <p>
-            To be honest with you I have no idea what to put here but I decided to go with an ocean theme with the pictures and colors. To make this site marginally more useful though, the buttons all lead to the #TeamSeas website, so go donate and save the turtles?
+            To be honest with you I have no idea what to put here but I decided to go with an ocean theme with the pictures and colors. To make this site marginally more useful though, the buttons all lead to the #TeamSeas website, so go donate and save the turtles!
         </p>
 
-        <a href="https://teamseas.org/">
+        <a href="https://teamseas.org/" target="_blank">
             <button type="submit" class="donate-button"> 
                 Go Donate
             </button>
         </a> 
     </div>
 
-    <div class="main-right">
-        <img src="pictures/ocean.jpg" alt="Some ocean.">
-    </div>
+    <img src="pictures/ocean.jpg" alt="Some ocean.">
 </main>
 
 <section class="photo-gallery">
@@ -70,7 +69,7 @@
 
 <section class="quote">
     <p>
-        This is an inspiring quote, or a testimonial from a customer. maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice. Furthermore, I'll add a few more sentences to make this paragraph longer. However, do not take this the wrong way! This isn't just so it fills up more space. Trust me. Also help clean the ocean and go donate to #TeamSeas!
+        This is an inspiring quote, or a testimonial from a customer. maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice. Furthermore, I'll add a few more sentences to make this paragraph longer. However, do not take this the wrong way! This isn't just so it fills up more space. Trust me. Also help clean the oceans and go donate to #TeamSeas!
     </p>
 
     <p class="quote-author"> - Thor, God of Thunder (Probably) </p>
@@ -85,7 +84,7 @@
     </div>
 
     <div class="call-right">
-        <a href="https://teamseas.org/">
+        <a href="https://teamseas.org/" target="_blank">
             <button type="submit" class="donate-button">
                 Go Donate
             </button>
