Add box sizing. Fix minor typos

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 <section class="quote">
     <p>
-        This is an inspiring quote, or a testimonial from a customer. maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice. Furthermore, I'll add a few more sentences to make this paragraph longer. However, do not take this the wrong way! This isn't just so it fills up more space. Trust me. Also help clean the oceans and go donate to #TeamSeas!
+        " This is an inspiring quote, or a testimonial from a customer. maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice. Furthermore, I'll add a few more sentences to make this paragraph longer. However, do not take this the wrong way! This isn't just so it fills up more space. Trust me. Also help clean the oceans and go donate to #TeamSeas! "
     </p>
 
     <p class="quote-author"> - Thor, God of Thunder (Probably) </p>
@@ -95,7 +95,7 @@
 
 <footer class="footer">
     <p> Copyright © 
-        <a href="https://www.theodinproject.com/"> The Odin Project 2022 </a> | 
+        <a href="https://www.theodinproject.com/"> The Odin Project 2022</a> | 
         <a href="https://github.com/gr2ws"> r2ws </a> 
     </p>
 </footer>
