--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 <section class="photo-gallery">
     <h2> Some Random Ocean Pictures </h2>
 
+<div class="gallery-container">
     <div> 
         <img src="pictures/fish.jpg" alt="Some cool fish.">
 
@@ -65,6 +66,8 @@
 
         <p> And lastly, a picture of some generic sunset to make you feel good. </p>        
     </div>
+</div>
+
 </section>
 
 <section class="quote">
