Finish pc layout

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </section>
 
 <section class="call">
-<div>
+<div class="call-container">
     <div class="call-left">
         <h3> Call to action! It's time! </h3>
 
@@ -98,7 +98,7 @@
 
 <footer class="footer">
     <p> Copyright © 
-        <a href="https://www.theodinproject.com/"> The Odin Project 2022</a> | 
+        <a href="https://www.theodinproject.com/"> The Odin Project 2022 </a> | 
         <a href="https://github.com/gr2ws"> r2ws </a> 
     </p>
 </footer>
