--- a/index.html
+++ b/index.html
@@ -71,11 +71,15 @@
 </section>
 
 <section class="quote">
-    <p>
+    <div class="quote-overlay">
+        <p>
         " This is an inspiring quote, or a testimonial from a customer. maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice. Furthermore, I'll add a few more sentences to make this paragraph longer. However, do not take this the wrong way! This isn't just so it fills up more space. Trust me. Also help clean the oceans and go donate to #TeamSeas! "
-    </p>
+        </p>
 
-    <p class="quote-author"> - Thor, God of Thunder (Probably) </p>
+        <p class="quote-author"> - Thor, God of Thunder (Probably) </p>
+    </div>
+
+    <img src="pictures/turtle.jpg" alt="Another ocean">
 </section>
 
 <section class="call">
