Change fonts & other minor tweaks

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <a href="https://teamseas.org/" target="_blank">
             <button type="submit" class="donate-button"> 
-                Go Donate
+                Donate
             </button>
         </a> 
     </div>
@@ -76,7 +76,7 @@
         " This is an inspiring quote, or a testimonial from a customer. maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice. Furthermore, I'll add a few more sentences to make this paragraph longer. However, do not take this the wrong way! This isn't just so it fills up more space. Trust me. Also help clean the oceans and go donate to #TeamSeas! "
         </p>
 
-        <p class="quote-author"> - Thor, God of Thunder (Probably) </p>
+        <p class="quote-author"> - Aemir, God of the Sea (Probably) </p>
     </div>
 
     <img src="pictures/turtle.jpg" alt="Another ocean">
@@ -93,7 +93,7 @@
     <div class="call-right">
         <a href="https://teamseas.org/" target="_blank">
             <button type="submit" class="donate-button">
-                Go Donate
+                Donate
             </button>
         </a> 
     </div>
