Add fixed backgrounds and shadows

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
         </a> 
     </div>
 
-    <img src="pictures/ocean.jpg" alt="Some ocean.">
+    <div class="img"> 
+
+    </div>
 </main>
 
 <section class="photo-gallery">
@@ -79,7 +81,7 @@
         <p class="quote-author"> - Aemir, God of the Sea (Probably) </p>
     </div>
 
-    <img src="pictures/turtle.jpg" alt="Another ocean">
+    <div class="img"> </div>
 </section>
 
 <section class="call">
