Adjust height and centered contents

--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@
 
 <body>
 
+<div class="dark-overlay"> </div>
+
 <header class="header"> 
-    <h2> Logo </h2>
+    <h2> 
+        <div class="l">L</div>
+        <div class="of">o</div>
+        <div class="g">g</div>
+        <div class="ol">o</div>
+    </h2>
 
     <ul class="link-list">
         <li> <a href="#"> Link One </a> </li>
@@ -23,6 +30,7 @@
 
 <main class="main">
     <div class="main-overlay">
+        <div>
         <h1> This website is awesome! </h1>
 
         <p>
@@ -33,7 +41,8 @@
             <button type="submit" class="donate-button"> 
                 Donate
             </button>
-        </a> 
+        </a>
+        </div> 
     </div>
 
     <div class="img"> 
