Minor fixes and adjustments

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <a href="https://teamseas.org/" target="_blank">
             <button type="submit" class="donate-button"> 
-                Donate
+                <p> Donate </p>
             </button>
         </a>
         </div> 
@@ -104,7 +104,7 @@
     <div class="call-right">
         <a href="https://teamseas.org/" target="_blank">
             <button type="submit" class="donate-button">
-                Donate
+                <p> Donate </p>
             </button>
         </a> 
     </div>
@@ -113,8 +113,8 @@
 
 <footer class="footer">
     <p> Copyright © 
-        <a href="https://www.theodinproject.com/"> The Odin Project 2022 </a> | 
-        <a href="https://github.com/gr2ws"> r2ws </a> 
+        <a href="https://www.theodinproject.com/" target="_blank">The Odin Project 2022</a> | 
+        <a href="https://github.com/gr2ws" target="_blank"> r2ws </a> 
     </p>
 </footer>
 
