Minor tweaks and fixes

--- a/index.html
+++ b/index.html
@@ -54,25 +54,25 @@
     <h2> Some Random Ocean Pictures </h2>
 
 <div class="gallery-container">
-    <div> 
+    <div class="gallery-item"> 
         <img src="pictures/fish.jpg" alt="Some cool fish.">
 
         <p> Look at all these fishies. They have cool yellow fins and stripes. </p>        
     </div>
 
-    <div> 
+    <div class="gallery-item">  
         <img src="pictures/jellyfish-2.jpg" alt="Look at those jellyfish.">
 
         <p> These jellyfish look sick. I have no idea what species they are. </p>        
     </div>
 
-    <div> 
+    <div class="gallery-item"> 
         <img src="pictures/jellyfish.jpg" alt="One more jellyfish.">
 
         <p> This is one fat jellyfish. It looks like the guys in the last picture but chonkier. </p>        
     </div>
 
-    <div> 
+    <div class="gallery-item">  
         <img src="pictures/sunset.jpg" alt="A sunset.">
 
         <p> And lastly, a picture of some generic sunset to make you feel good. </p>        
