Add tabindex, change header links

--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
 
 <body>
 
-<div class="dark-overlay"> </div>
-
 <header class="header"> 
     <h2> 
         <div class="l">L</div>
@@ -22,9 +20,9 @@
     </h2>
 
     <ul class="link-list">
-        <li> <a href="#"> Link One </a> </li>
-        <li> <a href="#"> Link Two </a> </li>
-        <li> <a href="#"> Link Three </a> </li>
+        <li> <a href="#photo"> Gallery </a> </li>
+        <li> <a href="#test" class="mid"> Testimonies </a> </li>
+        <li> <a href="#call"> Donate </a> </li>
     </ul>
 </header>
 
@@ -50,29 +48,29 @@
     </div>
 </main>
 
-<section class="photo-gallery">
+<section class="photo-gallery" id="photo">
     <h2> Some Random Ocean Pictures </h2>
 
 <div class="gallery-container">
-    <div class="gallery-item"> 
+    <div class="gallery-item" tabindex="0"> 
         <img src="pictures/fish.jpg" alt="Some cool fish.">
 
         <p> Look at all these fishies. They have cool yellow fins and stripes. </p>        
     </div>
 
-    <div class="gallery-item">  
+    <div class="gallery-item" tabindex="0">  
         <img src="pictures/jellyfish-2.jpg" alt="Look at those jellyfish.">
 
         <p> These jellyfish look sick. I have no idea what species they are. </p>        
     </div>
 
-    <div class="gallery-item"> 
+    <div class="gallery-item" tabindex="0"> 
         <img src="pictures/jellyfish.jpg" alt="One more jellyfish.">
 
         <p> This is one fat jellyfish. It looks like the guys in the last picture but chonkier. </p>        
     </div>
 
-    <div class="gallery-item">  
+    <div class="gallery-item" tabindex="0">  
         <img src="pictures/sunset.jpg" alt="A sunset.">
 
         <p> And lastly, a picture of some generic sunset to make you feel good. </p>        
@@ -81,7 +79,7 @@
 
 </section>
 
-<section class="quote">
+<section class="quote" id="test">
     <div class="quote-overlay">
         <p>
         "This is an inspiring quote, or a testimonial from a customer. maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice. Furthermore, I'll add a few more sentences to make this paragraph longer. However, do not take this the wrong way! This isn't just so it fills up more space. Trust me. Also help clean the oceans and go donate to #TeamSeas!"
@@ -93,7 +91,7 @@
     <div class="img"> </div>
 </section>
 
-<section class="call">
+<section class="call" id="call">
 <div class="call-container">
     <div class="call-left">
         <h3> Call to action! It's time! </h3>
