Responsive design for normal sized monitors

--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
         </div> 
     </div>
 
-    <div class="img"> 
-
-    </div>
+    <div class="img"> </div>
 </main>
 
 <section class="photo-gallery" id="photo">
